// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

<form
  class="c0"
/>
`;

exports[`Form component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #1A5AFE;
  opacity: 1;
}

.c10 {
  box-sizing: border-box;
  color: #000A28;
  font-size: 14px;
  font-weight: 600;
  line-height: 1;
  margin-left: 4px;
  margin-right: 8px;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
  color: #000A28;
  background-color: #ffffff;
  font-family: inherit;
  font-size: 16px;
  line-height: initial;
  height: 48px;
  padding-left: 20px;
  padding-right: 20px;
  border: 1px solid transparent;
  border-color: #C2C4CC;
  border-radius: 4px;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  box-shadow: 0px 3px 6px rgba(0,10,40,0.06);
}

.c4:focus {
  outline: none;
  border-color: #1A5AFE;
}

.c4:disabled {
  background-color: #F8F8F9;
  pointer-events: none;
}

.c4::-webkit-input-placeholder {
  color: #777C8C;
}

.c4::-moz-placeholder {
  color: #777C8C;
}

.c4:-ms-input-placeholder {
  color: #777C8C;
}

.c4::placeholder {
  color: #777C8C;
}

.c4[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c4[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c4[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c4[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c4:invalid {
  border-color: #E58989;
  background: #FCF5F5;
}

.was-validated .c4:invalid:focus {
  border-color: #1A5AFE;
}

.c3:after {
  content: ' *';
  font-weight: normal;
  color: #B20000;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c7 > input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: relative;
  z-index: 1;
  display: block;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c7 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #989CA6;
}

.c7 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #1A5AFE;
}

.c7 > input:checked ~ svg[name='checked'] {
  display: block;
}

.c6 {
  cursor: pointer;
}

.c6:hover input:not(:disabled) ~ svg[name='unchecked'] {
  fill: currentColor;
}

<form
  class="c0"
>
  <label
    class="c1"
    display="inline-flex"
    width="1"
  >
    <div
      class="c2 c3"
      font-size="small"
      font-weight="label"
    >
      Email
    </div>
    <input
      class="c4"
      color="text"
      font-family="inherit"
      font-size="default"
      height="48px"
      required=""
      type="email"
      width="1"
    />
  </label>
  <label
    class="c1"
    display="inline-flex"
    width="1"
  >
    <div
      class="c2 c3"
      font-size="small"
      font-weight="label"
    >
      Password
    </div>
    <input
      class="c4"
      color="text"
      font-family="inherit"
      font-size="default"
      height="48px"
      required=""
      type="password"
      width="1"
    />
  </label>
  <label
    class="c5 c6"
    color="primary"
    display="flex"
    opacity="1"
  >
    <div
      class="c0 c7"
    >
      <input
        color="primary"
        mb="3"
        type="checkbox"
      />
      <svg
        class="c8"
        color="inherit"
        fill="currentcolor"
        height="24"
        name="checked"
        size="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <svg
        class="c9"
        color="inherit"
        fill="currentcolor"
        height="24"
        name="unchecked"
        size="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <div
      class="c10"
      color="text"
      font-size="1"
      font-weight="3"
    >
      Remember me?
    </div>
  </label>
</form>
`;

exports[`Form component sanity renders children elements 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
  color: #1A5AFE;
  opacity: 1;
}

.c10 {
  box-sizing: border-box;
  color: #000A28;
  font-size: 14px;
  font-weight: 600;
  line-height: 1;
  margin-left: 4px;
  margin-right: 8px;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c9 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: inherit;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
  color: #000A28;
  background-color: #ffffff;
  font-family: inherit;
  font-size: 16px;
  line-height: initial;
  height: 48px;
  padding-left: 20px;
  padding-right: 20px;
  border: 1px solid transparent;
  border-color: #C2C4CC;
  border-radius: 4px;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  box-shadow: 0px 3px 6px rgba(0,10,40,0.06);
}

.c4:focus {
  outline: none;
  border-color: #1A5AFE;
}

.c4:disabled {
  background-color: #F8F8F9;
  pointer-events: none;
}

.c4::-webkit-input-placeholder {
  color: #777C8C;
}

.c4::-moz-placeholder {
  color: #777C8C;
}

.c4:-ms-input-placeholder {
  color: #777C8C;
}

.c4::placeholder {
  color: #777C8C;
}

.c4[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c4[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c4[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c4[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c4:invalid {
  border-color: #E58989;
  background: #FCF5F5;
}

.was-validated .c4:invalid:focus {
  border-color: #1A5AFE;
}

.c3:after {
  content: ' *';
  font-weight: normal;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c7 > input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  position: relative;
  z-index: 1;
  display: block;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c7 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #989CA6;
}

.c7 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #1A5AFE;
}

.c7 > input:checked ~ svg[name='checked'] {
  display: block;
}

.c6 {
  cursor: pointer;
}

.c6:hover input:not(:disabled) ~ svg[name='unchecked'] {
  fill: currentColor;
}

<form
  class="c0"
>
  <label
    class="c1"
    display="inline-flex"
    width="1"
  >
    <div
      class="c2 c3"
      font-size="small"
      font-weight="label"
    >
      Email
    </div>
    <input
      class="c4"
      color="text"
      font-family="inherit"
      font-size="default"
      height="48px"
      required=""
      type="email"
      width="1"
    />
  </label>
  <label
    class="c1"
    display="inline-flex"
    width="1"
  >
    <div
      class="c2 c3"
      font-size="small"
      font-weight="label"
    >
      Password
    </div>
    <input
      class="c4"
      color="text"
      font-family="inherit"
      font-size="default"
      height="48px"
      required=""
      type="password"
      width="1"
    />
  </label>
  <label
    class="c5 c6"
    color="primary"
    display="flex"
    opacity="1"
  >
    <div
      class="c0 c7"
    >
      <input
        color="primary"
        mb="3"
        type="checkbox"
      />
      <svg
        class="c8"
        color="inherit"
        fill="currentcolor"
        height="24"
        name="checked"
        size="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <svg
        class="c9"
        color="inherit"
        fill="currentcolor"
        height="24"
        name="unchecked"
        size="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <div
      class="c10"
      color="text"
      font-size="1"
      font-weight="3"
    >
      Remember me?
    </div>
  </label>
</form>
`;
